haproxy/haproxy-reencrypt/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-testapp-reencrypt
  labels:
    ingress: testapp-reencrypt
